--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>task 0</artifactId>
+    <artifactId>4-AT-31-S.Tkachuk</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
-
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
 
 </project>
